[project]
name = "centurion-bot"
version = "1.0.0"
description = "Telegram task-management bot for groups (modern rewrite of DoForMe)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ruslanlap" }]

dependencies = [
    "aiogram>=3.15,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.14,<2",
    "pydantic-settings>=2.7,<3",
    "python-dateutil>=2.9,<3",
    "structlog>=24.4,<26",
    "apscheduler>=3.10,<4",
    "aiohttp>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
]
mysql = ["asyncmy>=0.2,<1"]

[project.scripts]
centurion-bot = "centurion_bot.__main__:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["centurion_bot*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
